--- a/audio_visualizer1/project.json
+++ b/audio_visualizer1/project.json
@@ -8,6 +8,21 @@
 				"text": "ui_browse_properties_scheme_color",
 				"type": "color",
 				"value": "0 0 0"
+			},
+			"preset": {
+				"options": [
+					{
+						"label": "Cube",
+						"value": 0
+					},
+					{
+						"label": "Circle",
+						"value": 1
+					}
+				],
+				"text": "Preset",
+				"type": "combo",
+				"value": 0
 			}
 		}
 	},
